--- a/style.css
+++ b/style.css
@@ -16,30 +16,18 @@ body{
   position: relative;
 }
 
-#countdown #tiles > span{
-  width: 92px;
-  width: 92px;
-  font: bold 48px 'Droid Sans', Arial, sans-serif;
-  text-align: center;
-  color: #111;
-  background-color: whitesmoke;
-  /* border-top: 1px solid #fff; */
-  border-radius: 15px;
-  margin: 0 7px;
-  padding: 18px 0;
-  display: inline-block;
-  position: relative;
+#countdown #tiles > h3{
+    width: 92px;
+    font: bold 48px 'Droid Sans', Arial, sans-serif;
+    text-align: center;
+    color: #111;
+    background-color: whitesmoke;
+    border-radius: 15px;
+    margin: 0 7px;
+    padding: 18px 0;
+    display: inline-block;
+    position: relative;
 }
-
-/* #countdown #tiles > span:after{
-  width: 100%;
-  height: 1px;
-  background: #eee;
-  border-top: 1px solid #333;
-  display: block;
-  position: absolute;
-  top: 48%; left: 0;
-} */
 
 #countdown .labels{
   width: 100%;
@@ -70,7 +58,6 @@ img{
 
 .section1{
     font-family: 'Pacifico', cursive;
-    /* height: 20vh; */
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -129,5 +116,9 @@ img{
     #countdown .labels li{
         font-size: 10px;
         width: 60px;
+    }
+    #countdown #tiles > h3{
+        padding: 7px 3px;
+        display: inline;
     }
   }
